nac3core/src/codegen/snapshots/nac3core__codegen__test__layout__type_aligned_allocate_32bit.snap
---
source: nac3core/src/codegen/test.rs
expression: ir
---
define fastcc void @dummy() {
init:
  %0 = udiv i32 add (i32 sub (i32 ptrtoint (ptr getelementptr ({ %__nac3_object_header, { i32, [4 x i8], [0 x i32] } }, ptr null, i32 1) to i32), i32 1), i32 4112), ptrtoint (ptr getelementptr ({ %__nac3_object_header, { i32, [4 x i8], [0 x i32] } }, ptr null, i32 1) to i32)
  %mallocsize = mul i32 %0, ptrtoint (ptr getelementptr ({ %__nac3_object_header, { i32, [4 x i8], [0 x i32] } }, ptr null, i32 1) to i32), !dbg !4
  %1 = tail call ptr @malloc(i32 %mallocsize), !dbg !4
  store ptr %1, ptr @keep_alloc, align 4, !dbg !4
  ret void, !dbg !4
}
